# DOSSIER

./: .gitignore  README.md  dawon_req.txt  pyproject.toml  requirements-minimal.txt  requirements.txt
configs/: default.env.example
docs/: pipeline.md
logs/: README.md
logs/runs/v2_v2_v1_v1_category_99/reports/: errors.json  llm_judge.json
prompts/formatter/: system.txt  user.txt
prompts/search_agent/: system.txt  user.txt
prompts/toc_builder/: system.txt  user.txt
scripts/: dawon_qwen_download.sh  dawon_run.sh  run_dossier_full.sh  run_existing_server_full.sh  run_pipeline.py  setup_venv.sh
src/dossier/: __init__.py  backend.py  manifest.py
src/dossier/agents/: __init__.py  composer.py  formatter.py  search_agent.py  toc_builder.py
src/dossier/evaluation/: __init__.py  llm_judge.py  structured_eval.py
tests/: test_imports.py
