[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dossier-rag"
version = "0.1.0"
description = "Document-structured evidence-centric multi-document reasoning pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai==2.32.0",
  "python-dotenv==1.2.2",
]

[project.optional-dependencies]
gemini = ["google-generativeai==0.7.1"]
serve = ["vllm==0.19.0"]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
